--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f1fff8">
+    android:background="#efefef">
 
     <LinearLayout
         android:id="@+id/login_title_layout"
@@ -52,7 +52,7 @@
             android:layout_height="40dp"
             android:hint="이메일을 입력해 주세요"
             android:inputType="textEmailAddress"
-            android:background="@drawable/round_border"
+            android:background="@drawable/round_border_white"
             android:textAlignment="center"
             android:textSize="12dp" />
 
@@ -63,7 +63,7 @@
             android:layout_height="40dp"
             android:hint="비밀번호를 입력해 주세요"
             android:inputType="textPassword"
-            android:background="@drawable/round_border"
+            android:background="@drawable/round_border_white"
             android:textAlignment="center"
             android:textSize="12dp" />
 
@@ -78,12 +78,23 @@
             android:visibility="gone"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/register_info_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:textAlignment="center"
+            android:text="가입정보가 없거나 로그인정보가 잘못 되었습니다"
+            android:textColor="#e90005" />
+
         <Button
             android:id="@+id/login_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="#7f66a7"
+            android:background="@drawable/round_border_purple"
             android:text="로그인"
             android:textColor="#ffffff"
             android:textSize="15dp" />
@@ -95,7 +106,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:textColor="#81add6"
+                android:textColor="#1d68bf"
                 android:id="@+id/login_find_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -103,7 +114,7 @@
                 android:text="로그인 정보 찾기" />
 
             <TextView
-                android:textColor="#81add6"
+                android:textColor="#1d68bf"
                 android:id="@+id/login_regist_btn"
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
@@ -111,16 +122,5 @@
                 android:text="회원가입" />
 
         </RelativeLayout>
-
     </LinearLayout>
-
-    <CheckBox
-        android:id="@+id/auto_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/id_layout"
-        android:layout_alignParentRight="true"
-        android:checked="true"
-        android:text="자동로그인" />
-
 </RelativeLayout>
