--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,115 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#efefef"
+    android:orientation="vertical"
     tools:context=".RegisterActivityDir.RegisterActivity">
 
+    <LinearLayout
+        android:id="@+id/login_title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#ffffff"
+        android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/register_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/register_back_btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
 
+        <TextView
+            android:id="@+id/register_login_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:text="회원가입"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/moonlight_small_icon" />
 
     <LinearLayout
-        android:id="@+id/register_pw_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_email">
+        android:layout_gravity="right"
+        android:layout_marginRight="15dp"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/register_email_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="이메일" />
+
+        <EditText
+            android:id="@+id/register_email"
+            android:layout_width="240dp"
+            android:layout_height="40dp"
+            android:background="@drawable/round_border_white"
+            android:hint="  이메일을 입력해 주세요"
+            android:inputType="textEmailAddress"
+            android:textSize="12sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/register_pw_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="비밀번호" />
 
         <EditText
             android:id="@+id/register_pw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:maxLength="20" />
-
-        <TextView
-            android:id="@+id/register_pw_check"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="25dp"
-            android:text="일치"
-            android:visibility="invisible"
-            android:textColor="#32cd32" />
-
+            android:layout_width="240dp"
+            android:layout_height="40dp"
+            android:background="@drawable/round_border_white"
+            android:hint="  비밀번호를 입력해주세요"
+            android:textSize="12sp"
+            android:inputType="textPassword" />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/register_pw_confirm_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_pw_layout">
+        android:layout_gravity="right"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/register_pw_confirm_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="비밀번호 확인" />
 
         <EditText
             android:id="@+id/register_pw_confirm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/password_confirm"
-            android:inputType="textPassword"
-            android:maxLength="20" />
-
-        <TextView
-            android:id="@+id/register_pw_confirm_check"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="25dp"
-            android:text="일치"
-            android:textColor="#32cd32" />
+            android:layout_width="240dp"
+            android:layout_height="40dp"
+            android:background="@drawable/round_border_white"
+            android:hint="  비밀번호를 다시 입력해주세요"
+            android:textSize="12sp"
+            android:inputType="textPassword" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/register_name"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:hint="@string/name"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="right"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp"
+        android:orientation="horizontal">
 
-        app:layout_constraintTop_toBottomOf="@+id/register_pw_confirm_layout" />
+        <TextView
+            android:id="@+id/register_name_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="이름" />
+
+        <EditText
+            android:id="@+id/register_name"
+            android:layout_width="240dp"
+            android:layout_height="40dp"
+            android:background="@drawable/round_border_white"
+            android:hint="  회원 이름을 입력해주세요"
+            android:textSize="12sp"
+            android:inputType="text" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/register_info_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:text="모든 내용을 기입하여 주십시오"
+        android:textColor="#e90005" />
 
     <Button
         android:id="@+id/register_join_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:text="sign up"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/register_name" />
+        android:background="@drawable/round_border_purple"
+        android:layout_margin="10dp"
+        android:text="회원가입"
+        android:textColor="#ffffff" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/register_cancel_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/round_border_white"
+        android:text="취소"
+        android:textColor="#666666" />
+
+</LinearLayout>
