--- a/app/src/main/res/layout/mainpage_custom_title_bar.xml
+++ b/app/src/main/res/layout/mainpage_custom_title_bar.xml
@@ -42,11 +42,11 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
 
-        <ImageButton
+        <Button
             android:id="@+id/title_search_btn"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_search_icon" />
+            android:background="@drawable/ic_search_icon" />
 
     </LinearLayout>
 
